--- a/procura-microservices/apps/ui/package.json
+++ b/procura-microservices/apps/ui/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest",
-    "axios": "^0.21.1"
+    "react-dom": "latest"
   },
   "devDependencies": {
+    "@types/node": "^24.5.2",
+    "@types/react": "^19.1.13",
+    "axios": "^1.12.2",
     "eslint": "latest",
     "eslint-config-next": "latest"
   }
